--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                     <img src="assets/play_circle_outline.png" alt="Ícone para sortear">
                     Sortear amigo
                 </button>
+                <button class="button-draw" onclick="limparCampo()" aria-label="Sortear amigo secreto">
+                    <img src="assets/play_circle_outline.png" alt="Ícone para limpar">
+                    Limpar Campo
+                </button>
             </div>
         </section>
     </main>
